--- a/gspro-prefetcher/package.json
+++ b/gspro-prefetcher/package.json
@@ -8,13 +8,12 @@
   },
   "devDependencies": {
     "@types/request": "^2.48.9",
-    "bun-types": "^1.0.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.2.2",
+    "@types/node": "^20.8.3",
+    "@types/express": "^4.17.18"
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "request": "^2.88.2"
+    "express": "^4.18.2"
   }
 }
