--- a/gspro-prefetcher/package.json
+++ b/gspro-prefetcher/package.json
@@ -1,19 +1,19 @@
 {
   "name": "gspro-prefetcher",
-  "module": "index.ts",
-  "type": "module",
   "scripts": {
-    "start": "bun run index.ts",
-    "dev": "bun --watch index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
-    "@types/request": "^2.48.9",
-    "typescript": "^5.2.2",
+    "@types/express": "^4.17.18",
     "@types/node": "^20.8.3",
-    "@types/express": "^4.17.18"
+    "@types/request": "^2.48.9",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
