--- a/gspro-prefetcher/tsconfig.json
+++ b/gspro-prefetcher/tsconfig.json
@@ -1,20 +1,19 @@
 {
   "compilerOptions": {
     "lib": ["ESNext"],
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "bundler",
-    "moduleDetection": "force",
-    "allowImportingTsExtensions": true,
+    "module": "CommonJS",
+    "target": "ES2020",
     "noEmit": true,
     "composite": true,
     "strict": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
     "jsx": "preserve",
-    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "types": ["bun-types"]
+    "types": [],
+    "outDir": "dist",
+    "esModuleInterop": true
   }
 }
