--- a/sig-league/package.json
+++ b/sig-league/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/server.ts",
-    "prod": "node dist/server.js"
+    "prod": "node dist/server.js",
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +15,16 @@
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
-    "typed-html": "^3.0.1"
+    "typed-html": "^3.0.1",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
